Set up basic functionality for generating image from prompt and displaying it to the UI

--- a/AiArtDesctop/AiArtDesctop.csproj
+++ b/AiArtDesctop/AiArtDesctop.csproj
@@ -18,5 +18,6 @@
             <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="3.118.0-preview.2.3" />
     </ItemGroup>
 </Project>
